# django-migration-docs

./: .env.template  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  README.md  README.rst  environment.yml  footing.yaml  mkdocs.yml  pyproject.toml  settings.py  setup.cfg  temple.yaml  tox.ini
.circleci/: config.yml
docs/: Makefile  conf.py  contributing.md  index.md  index.rst  installation.md  installation.rst  module.md  package.rst  release_notes.md  requirements.txt  tutorial.md  tutorial.rst
docs/css/: mkdocs-material.css
migration_docs/: __init__.py  apps.py  core.py  utils.py  version.py
migration_docs/management/commands/: migration_docs.py
migration_docs/tests/: models.py  test_core.py  test_integration.py
migration_docs/tests/migrations/: 0001_initial.py  0002_testmodel_field2.py  0003_testmodel_field3.py
